--- a/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -21,7 +21,7 @@ RUN dnf -y upgrade --refresh --best --nodocs --noplugins --setopt=install_weak_d
 # Install useful OS packages
 RUN ARCH=$(uname -m) && \
     echo "Detected architecture: $ARCH" && \
-    PACKAGES="mesa-libGL skopeo" && \
+    PACKAGES="perl mesa-libGL skopeo" && \
     if [ "$ARCH" = "s390x" ] || [ "$ARCH" = "ppc64le" ]; then \
         PACKAGES="$PACKAGES gcc g++ make openssl-devel autoconf automake libtool cmake"; \
     fi && \
