add 2025b label on the dockerfile

--- a/.tekton/multiarch-pull-request-pipeline.yaml
+++ b/.tekton/multiarch-pull-request-pipeline.yaml
@@ -99,6 +99,10 @@ spec:
       set of values is determined by the configuration of the multi-platform-controller.
     name: build-platforms
     type: array
+  - default: []
+    description: Array of image labels to apply to the image (key=value strings)
+    name: image-labels
+    type: array
   results:
   - description: ""
     name: IMAGE_URL
@@ -219,6 +223,9 @@ spec:
       value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
     - name: IMAGE_APPEND_PLATFORM
       value: "true"
+    - name: IMAGE_LABELS
+      value:
+      - $(params.image-labels[*])
     runAfter:
     - prefetch-dependencies
     taskRef:
