--- a/.tekton/odh-base-image-cuda-py311-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-py311-c9s-push.yaml
@@ -30,6 +30,9 @@ spec:
     value:
     - linux/x86_64
     - linux/arm64
+  - name: image-labels
+    value:
+    - release=2025b
   - name: path-context
     value: .
   - name: additional-tags
