--- a/.tekton/multiarch-push-pipeline.yaml
+++ b/.tekton/multiarch-push-pipeline.yaml
@@ -111,6 +111,10 @@ spec:
     description: Whether to enable privileged mode, should be used only with remote VMs
     name: privileged-nested
     type: string
+  - default: []
+    description: Array of image labels to apply to the built image. 
+    name: image-labels
+    type: array
   - default:
     - linux/x86_64
     description: List of platforms to build the container images on. The available
@@ -275,6 +279,9 @@ spec:
       value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
     - name: IMAGE_APPEND_PLATFORM
       value: "true"
+    - name: IMAGE_LABELS
+      value: 
+      - $(params.image-labels[*])
     runAfter:
     - prefetch-dependencies
     taskRef:
