--- a/.tekton/odh-base-image-cuda-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-cuda-py312-ubi9-pull-request.yaml
@@ -41,6 +41,9 @@ spec:
     value: base-images/cuda/12.6/ubi9-python-3.12/Dockerfile.cuda
   - name: path-context
     value: .
+  - name: image-labels
+    value:
+    - release=2025b
   pipelineRef:
     name: multiarch-pull-request-pipeline
   taskRunTemplate:
