RHAIENG-726: add ROCm-based TensorFlow and pipeline runtime images to manifests

--- a/manifests/base/commit-latest.env
+++ b/manifests/base/commit-latest.env
@@ -10,6 +10,7 @@ odh-pipeline-runtime-pytorch-rocm-py312-ubi9-commit-n=99698b7
 odh-pipeline-runtime-tensorflow-cuda-py311-ubi9-commit-n=1247a41
 odh-pipeline-runtime-tensorflow-cuda-py312-ubi9-commit-n=99698b7
 odh-pipeline-runtime-tensorflow-rocm-py311-ubi9-commit-n=80cffeb
+odh-pipeline-runtime-tensorflow-rocm-py312-ubi9-commit-n=93c0810
 odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n=1247a41
 odh-workbench-codeserver-datascience-cpu-py312-ubi9-commit-n=0a74279
 odh-workbench-jupyter-datascience-cpu-py311-ubi9-commit-n=1247a41
@@ -28,6 +29,7 @@ odh-workbench-jupyter-pytorch-rocm-py312-ubi9-commit-n=864260c
 odh-workbench-jupyter-tensorflow-cuda-py311-ubi9-commit-n=1247a41
 odh-workbench-jupyter-tensorflow-cuda-py312-ubi9-commit-n=144d079
 odh-workbench-jupyter-tensorflow-rocm-py311-ubi9-commit-n=1247a41
+odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-commit-n=144d079
 odh-workbench-jupyter-trustyai-cpu-py311-ubi9-commit-n=1247a41
 odh-workbench-jupyter-trustyai-cpu-py312-ubi9-commit-n=144d079
 odh-workbench-rstudio-minimal-cpu-py311-c9s-commit-n=0d8752d
