--- a/base-images/rocm/6.2/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.2/c9s-python-3.12/Dockerfile.rocm
@@ -32,8 +32,24 @@ RUN echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     echo "baseurl=https://repo.radeon.com/amdgpu/$AMDGPU_VERSION/rhel/9.4/main/x86_64" >> /etc/yum.repos.d/amdgpu.repo && \
     echo "enabled=1" >> /etc/yum.repos.d/amdgpu.repo && \
     echo "gpgcheck=0" >> /etc/yum.repos.d/amdgpu.repo && \
-    dnf install -y rocm-developer-tools rocm-ml-sdk rocm-opencl-sdk rocm-openmp-sdk rocm-utils && \
+    dnf install -y \
+      rocm-core hip-runtime-amd \
+    # system utilities
+      rocm-smi-lib rocminfo \
+      rocblas rocsolver rocfft rocrand rocsparse miopen-hip rccl \
+    # HIP (Heterogeneous-compute Interface for Portability)
+      hipblas hipblaslt hipfft hipsparse hiprand hipsolver \
+    # suitesparse's /lib64/libspqr.so.2.0.9 needs libtbb.so.2
+      tbb && \
     dnf clean all && rm -rf /var/cache/yum
+
+# https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/post-install.html#configure-rocm-shared-objects
+RUN tee --append /etc/ld.so.conf.d/rocm.conf <<EOF
+  /opt/rocm/lib
+  /opt/rocm/lib64
+EOF
+
+RUN ldconfig
 
 # Restore user workspace
 USER 1001
