--- a/.tekton/odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-v2-25-push.yaml
+++ b/.tekton/odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-v2-25-push.yaml
@@ -55,6 +55,15 @@ spec:
   - name: build-platforms
     value:
     - linux-extra-fast/amd64
+  - pipelineRef:
+      resolver: git
+      params:
+      - name: url
+        value: https://github.com/red-hat-data-services/konflux-central.git
+      - name: revision
+        value: '{{ target_branch }}'
+      - name: pathInRepo
+        value: pipelines/multi-arch-container-build.yaml
   timeouts:
     pipeline: 8h
     tasks: 4h
@@ -75,15 +84,6 @@ spec:
         limits:
           cpu: '16'
           memory: 32Gi
-  pipelineRef:
-    resolver: git
-    params:
-    - name: url
-      value: https://github.com/red-hat-data-services/konflux-central.git
-    - name: revision
-      value: '{{ target_branch }}'
-    - name: pathInRepo
-      value: pipelines/multi-arch-container-build.yaml
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-v2-25
   workspaces:
