--- a/.tekton/odh-workbench-codeserver-datascience-cpu-py312-pull-request.yaml
+++ b/.tekton/odh-workbench-codeserver-datascience-cpu-py312-pull-request.yaml
@@ -46,6 +46,7 @@ spec:
     - linux/x86_64
     - linux-m2xlarge/arm64
     - linux/s390x
+    - linux/ppc64le
   - name: image-expires-after
     value: 5d
   - name: enable-slack-failure-notification
