Add trash-cleanup 0.1.0

--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
 
     # JupyterLab packages
     "odh-elyra==4.2.3",
+    "odh-jupyter-trash-cleanup==0.1.0",
 
     "jupyterlab==4.4.4",
     "jupyter-bokeh~=4.0.5",
