--- a/jupyter/minimal/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/minimal/ubi9-python-3.12/pyproject.toml
@@ -5,6 +5,8 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # JupyterLab packages
+    "odh-jupyter-trash-cleanup==0.1.0",
+    
     "jupyterlab==4.4.4",
     "jupyter-server~=2.16.0",
     "jupyter-server-proxy~=4.4.0",
