--- a/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
 
     # JupyterLab packages
     "odh-elyra==4.2.3",
+    "odh-jupyter-trash-cleanup==0.1.0",
+    
     "jupyterlab==4.4.4",
     "jupyter-bokeh~=4.0.5",
     "jupyter-server~=2.16.0",
