--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
 
     # JupyterLab packages
     'odh-elyra==4.2.3',
+    "odh-jupyter-trash-cleanup==0.1.0",
 
     'jupyterlab==4.4.4',
     'jupyter-bokeh~=3.0.5', # trustyai 0.6.1 depends on jupyter-bokeh~=3.0.5
