Fix check-generated-code test catch

--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -85,14 +85,7 @@ COPY ${JUPYTER_REUSABLE_UTILS} utils/
 USER 0
 
 # Dependencies for PDF export begin
-RUN --mount=type=cache,from=pdf-builder,source=/usr/local/,target=/pdf_builder/,rw \
-    bash -c ' \
-    if [[ "$(uname -m)" == "ppc64le" ]]; then \
-        cp -r /pdf_builder/texlive /usr/local/; \
-        cp -r /pdf_builder/pandoc /usr/local/; \
-    else \
-        ./utils/install_pdf_deps.sh; \
-    fi'
+RUN ./utils/install_pdf_deps.sh
 ENV PATH="/usr/local/texlive/bin/linux:/usr/local/pandoc/bin:$PATH"
 # Dependencies for PDF export end
 
