--- a/.github/workflows/build-notebooks-pr.yaml
+++ b/.github/workflows/build-notebooks-pr.yaml
@@ -22,6 +22,8 @@ jobs:
   gen:
     name: Generate job matrix
     runs-on: ubuntu-latest
+    # rhds/notebooks builds from quay.io/aipcc bases and requires pull_request_target trigger
+    if: ${{ github.repository != 'red-hat-data-services/notebooks' }}
     outputs:
       matrix: ${{ steps.gen.outputs.matrix }}
       has_jobs: ${{ steps.gen.outputs.has_jobs }}
