--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -236,7 +236,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     #       Build debugpy from source instead
     uv pip install --no-cache git+https://github.com/microsoft/debugpy.git@v$(grep -A1 '\"debugpy\"' ./pylock.toml | grep -Eo '\b[0-9\.]+\b') && \
     # change ownership to default user (all packages were installed as root and has root:root ownership \
-    chown -R 1001:0 /opt/app-root/lib
+    chown -R 1001:0 /opt/app-root
 
 USER 1001
 
