--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -51,7 +51,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     source ./devel_env_setup.sh && \
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
     #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
-    uv pip install --strict --no-deps --refresh --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
+    UV_LINK_MODE=copy uv pip install --strict --no-deps --refresh --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
 
 # dummy file to make image build wait for this stage
 RUN touch /tmp/control
@@ -231,10 +231,10 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     echo "Installing softwares and packages" && \
     # we can ensure wheels are consumed from the cache only by restricting internet access for uv install with '--offline' flag
     # TODO(jdanek): seen some builds fail on GitHub Actions with --offline and see no need to limit ourselves to the cache, will remove this
-    uv pip install --cache-dir /root/.cache/uv --requirements=./pylock.toml && \
+    UV_LINK_MODE=copy uv pip install --cache-dir /root/.cache/uv --requirements=./pylock.toml && \
     # Note: debugpy wheel availabe on pypi (in uv cache) is none-any but bundles amd64.so files
     #       Build debugpy from source instead
-    uv pip install --no-cache git+https://github.com/microsoft/debugpy.git@v$(grep -A1 '\"debugpy\"' ./pylock.toml | grep -Eo '\b[0-9\.]+\b') && \
+    UV_LINK_MODE=copy uv pip install --no-cache git+https://github.com/microsoft/debugpy.git@v$(grep -A1 '\"debugpy\"' ./pylock.toml | grep -Eo '\b[0-9\.]+\b') && \
     # change ownership to default user (all packages were installed as root and has root:root ownership \
     chown -R 1001:0 /opt/app-root
 
