Fix permision on pytorch rocm

--- a/jupyter/rocm/pytorch/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/rocm/pytorch/ubi9-python-3.12/Dockerfile.rocm
@@ -143,14 +143,13 @@ RUN echo "Installing softwares and packages" && \
     # Disable announcement plugin of jupyterlab \
     jupyter labextension disable "@jupyterlab/apputils-extension:announcements" && \
     # Apply JupyterLab addons \
-    /opt/app-root/bin/utils/addons/apply.sh && \
-    # De-vendor the ROCm libs that are embedded in Pytorch \
-    ./de-vendor-torch.sh && \
-    rm ./de-vendor-torch.sh
+    /opt/app-root/bin/utils/addons/apply.sh
 
-# Fix permissions to support pip in Openshift environments \
 USER 0
-RUN chmod -R g+w /opt/app-root/lib/python3.12/site-packages && \
+# De-vendor the ROCm libs that are embedded in Pytorch  and fix permissions to support pip in Openshift environments
+RUN ./de-vendor-torch.sh && \
+    rm ./de-vendor-torch.sh && \
+    chmod -R g+w /opt/app-root/lib/python3.12/site-packages || true && \
     fix-permissions /opt/app-root -P
 USER 1001
 
