add system log collection on failure in GitHub Actions workflow to aid debugging (#2405)

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -736,3 +736,11 @@ jobs:
 
       - run: sudo compsize -x "${HOME}/.local/share/containers"
         if: "${{ !cancelled() && steps.install-compsize.outcome == 'success' }}"
+
+      # print system logs, useful when hunting for OOM kills
+
+      - run: sudo dmesg
+        if: "${{ failure() }}"
+
+      - run: journalctl --no-pager -k
+        if: "${{ failure() }}"
