--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -160,6 +160,53 @@ RUN --mount=type=cache,target=/root/.cache/pip \
         mkdir -p /tmp/wheels; \
     fi
 
+#######################################################
+# common-builder (for Power-only)
+#######################################################
+FROM cpu-base AS common-builder
+USER root
+RUN if [ "$(uname -m)" = "ppc64le" ]; then \
+    dnf install -y gcc-toolset-13 cmake ninja-build git wget unzip && \
+    dnf clean all; \
+    else \
+     echo "Skipping common-builder package install on non-Power"; \
+    fi
+
+#######################################################
+# onnx-builder (Power-only)
+#######################################################
+FROM common-builder AS onnx-builder
+ARG ONNX_VERSION=v1.19.0
+WORKDIR /root
+RUN if [ "$(uname -m)" = "ppc64le" ]; then \
+    source /opt/rh/gcc-toolset-13/enable && \
+    git clone --recursive https://github.com/onnx/onnx.git && \
+    cd onnx && git checkout ${ONNX_VERSION} && \
+    git submodule update --init --recursive && \
+    pip install -r requirements.txt && \
+    export CMAKE_ARGS="-DPython3_EXECUTABLE=$(which python3.12)" && \
+    pip wheel . -w /root/onnx_wheel; \
+    else \
+    echo "Skipping ONNX build on non-Power"; \
+    mkdir -p /root/onnx_wheel; \
+    fi
+
+#######################################################
+# openblas-builder (Power-only)
+#######################################################
+FROM common-builder AS openblas-builder
+ARG OPENBLAS_VERSION=0.3.30
+WORKDIR /root
+RUN if [ "$(uname -m)" = "ppc64le" ]; then \
+    wget https://github.com/OpenMathLib/OpenBLAS/releases/download/v${OPENBLAS_VERSION}/OpenBLAS-${OPENBLAS_VERSION}.zip && \
+    unzip OpenBLAS-${OPENBLAS_VERSION}.zip && \
+    cd OpenBLAS-${OPENBLAS_VERSION} && \
+    make -j$(nproc) TARGET=POWER9 BINARY=64 USE_OPENMP=1 USE_THREAD=1 NUM_THREADS=120 DYNAMIC_ARCH=1 INTERFACE64=0; \
+    else \
+    mkdir -p OpenBLAS-${OPENBLAS_VERSION}; \
+    echo "Skipping OpenBLAS build on non-Power"; \
+    fi
+
 ####################
 # jupyter-minimal #
 ####################
@@ -193,6 +240,7 @@ ENTRYPOINT ["start-notebook.sh"]
 FROM jupyter-minimal AS jupyter-datascience
 
 ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
+ARG OPENBLAS_VERSION=0.3.30
 ARG TARGETARCH
 
 LABEL name="odh-notebook-jupyter-datascience-ubi9-python-3.12" \
@@ -211,13 +259,16 @@ WORKDIR /opt/app-root/bin
 USER root
 
 # Install useful OS packages
-RUN dnf install -y jq unixODBC postgresql git-lfs libsndfile libxcrypt-compat && dnf clean all && rm -rf /var/cache/yum
+RUN dnf install -y jq unixODBC unixODBC-devel postgresql git-lfs libsndfile libxcrypt-compat && \
+    dnf clean all && rm -rf /var/cache/yum
 
 # Copy dynamically-linked mongocli built in earlier build stage
 COPY --from=mongocli-builder /tmp/mongocli /opt/app-root/bin/
 
 # Other apps and tools installed as default user
 USER 1001
+
+ENV PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/
 
 # Copy wheels from build stage (s390x only)
 COPY --from=s390x-builder /tmp/wheels /tmp/wheels
@@ -227,7 +278,20 @@ else \
     echo "Skipping wheel install for $TARGETARCH"; \
 fi
 
-# Install Python packages and Jupyterlab extensions from requirements.txt
+# Copy OpenBLAS,ONNX wheels for Power
+COPY --from=openblas-builder /root/OpenBLAS-${OPENBLAS_VERSION} /openblas
+COPY --from=onnx-builder /root/onnx_wheel/ /onnxwheels/
+
+# Power-specific ONNX/OpenBLAS installation
+RUN if [ "$(uname -m)" = "ppc64le" ]; then \
+    pip install /onnxwheels/*.whl && \
+    PREFIX=/usr/local make -C /openblas install && \
+    rm -rf /onnxwheels /openblas; \
+    else \
+    echo "Skipping ONNX/OpenBLAS install on non-Power"; \
+    fi
+
+# Install Python packages and Jupyterlab extensions from pylock.toml
 COPY ${DATASCIENCE_SOURCE_CODE}/pylock.toml ./
 # Copy Elyra setup to utils so that it's sourced at startup
 COPY ${DATASCIENCE_SOURCE_CODE}/setup-elyra.sh ${DATASCIENCE_SOURCE_CODE}/utils ./utils/
