--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "scipy~=1.15.2",
     "skl2onnx~=1.18.0",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
-    "codeflare-sdk~=0.30.0",
+    "codeflare-sdk~=0.30.0; platform_machine != 'ppc64le'",
     "kubeflow-training==1.9.3",
 
     # DB connectors
